Repository_Removed_and_EntitiyF_Added

--- a/CollageApp/appsettings.json
+++ b/CollageApp/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "CollageAppDbConnection": "Data Source=MSI\\SQLEXPRESS;Initial Catalog=CollegeApp;Integrated Security=True;Trust Server Certificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
